@@ -507,12 +507,11 @@ void CGUIControl::SetInitialVisibility()
 //  CLog::DebugLog("Set initial visibility for control %i: %s", m_dwControlID, m_bVisible ? "visible" : "hidden");
 }
 
-bool CGUIControl::UpdateEffectState()
+void CGUIControl::UpdateEffectState(DWORD currentTime)
 {
   if (m_visibleCondition)
     UpdateVisibility();
-  Animate();
-  return IsVisible();
+  Animate(currentTime);
 }
 
 void CGUIControl::SetVisibleCondition(int visible)
@@ -655,12 +654,12 @@ void CGUIControl::UpdateStates(ANIMATION_TYPE type, ANIMATION_PROCESS currentPro
 //    CLog::DebugLog("UpdateControlState of control id %i - now %s (type=%d, process=%d, state=%d)", m_dwControlID, m_bVisible ? "visible" : "hidden", type, currentProcess, currentState);
 }
 
-void CGUIControl::Animate()
+void CGUIControl::Animate(DWORD currentTime)
 {
   for (unsigned int i = 0; i < m_animations.size(); i++)
   {
     CAnimation &anim = m_animations[i];
-    anim.Animate(m_animTime, HasRendered());
+    anim.Animate(currentTime, HasRendered());
     // Update the control states (such as visibility)
     UpdateStates(anim.type, anim.currentProcess, anim.currentState);
     // and render the animation effect
@@ -683,7 +682,7 @@ void CGUIControl::Animate()
   }
 #ifdef PRE_SKIN_VERSION_2_0_COMPATIBILITY
   // do the temporary fade effect as well
-  m_tempAnimation.Animate(m_animTime, HasRendered());
+  m_tempAnimation.Animate(currentTime, HasRendered());
   UpdateStates(m_tempAnimation.type, m_tempAnimation.currentProcess, m_tempAnimation.currentState);
   g_graphicsContext.AddControlAnimation(m_tempAnimation.RenderAnimation());
   CAnimation anim = m_tempAnimation;
